# ziran

./: .dockerignore  .env.example  .gitignore  404.html  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTICE  README.md  SKILL.md  action.yml  docker-compose.yml  hatch_build.py  index.html  mkdocs.yml  pyproject.toml  release-please-config.json  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  skill_cve.md
.github/workflows/: _smoke-frontend-build.yml  action-test.yml  benchmark.yml  ci.yml  detection-accuracy.yml  docs.yml  lint-ci-templates.yml  lint.yml  npm-lockfile-refresh.yml  pentest-eval.yml  policy-refresh-selftest.yml  release-please.yml  release.yml  test.yml
.specify/: init-options.json
.specify/memory/: constitution.md
benchmarks/: README.md  accuracy_metrics.py  atlas_coverage.py  benchmark_comparison.py  comparative_analysis.py  detection_accuracy.py  detection_regression.py  gap_status.py  generate_all.py  historical_tracking.py  inventory.py  owasp_coverage.py  pentest_regression.py  pentest_vs_scanner.py  performance_metrics.py  regression_check.py  replay_llm_client.py  utility_metrics.py
benchmarks/ground_truth/: README.md  run.py  schema.py  validate.py
benchmarks/pentest_eval/: comparison.py  record_agent.py  recording.py  run_scanner.py  simulated_adapter.py  targets.py
benchmarks/results/: .gitignore  baseline.json  detection_accuracy_baseline.json  ground_truth_latest.md  pentest_eval_baseline.json
community/contributing/: index.html
community/roadmap/: index.html
community/skill-cves/: index.html
concepts/a2a-protocol/: index.html
concepts/adaptive-campaigns/: index.html
concepts/agent-security-landscape/: index.html
concepts/architecture/: index.html
concepts/attack-vectors/: index.html
concepts/browser-scanning/: index.html
concepts/detection-pipeline/: index.html
concepts/knowledge-graph/: index.html
concepts/multi-agent/: index.html
concepts/owasp-mapping/: index.html
concepts/pentesting-agent/: index.html
concepts/remote-scanning/: index.html
concepts/romance-scan/: index.html
concepts/streaming/: index.html
concepts/tool-chains/: index.html
docs/: getting-started.md  index.md
docs/community/: contributing.md  roadmap.md  skill-cves.md
docs/concepts/: a2a-protocol.md  adaptive-campaigns.md  agent-security-landscape.md  architecture.md  (+11 more)
examples/: .env.example  README.md  _progress.py  attack_library_example.py  cicd_quality_gate_example.py  crewai_example.py  custom_adapter_example.py  dynamic_vectors_example.py  langchain_example.py  poc_generation_example.py  policy_engine_example.py  pyproject.toml  rag_financial_advisor.py  router_rag.py  skill_cve_example.py  static_analysis_example.py  supervisor_multi_agent.py  vulnerable_agent.py
examples/01-static-analysis/: README.md  main.py  run.sh  sample_agent.py
examples/02-attack-library/: README.md  custom_vector.yaml  main.py  run.sh
examples/03-dynamic-vectors/: README.md  main.py  run.sh
examples/04-skill-cve/: README.md  main.py  run.sh
examples/05-poc-generation/: README.md  fixtures.py  main.py  run.sh
examples/06-policy-engine/: README.md  fixtures.py  main.py  run.sh  strict_policy.yaml
examples/07-cicd-quality-gate/: Jenkinsfile  README.md  azure-pipelines.yml  circleci-config.yml  fixtures.py  gate_config.yaml  gitlab-ci.yml  main.py  policy-refresh.yml  run.sh  sample-campaign-result.json  ziran-scan.yml
examples/08-custom-adapter/: README.md  main.py  run.sh
examples/08-registry-watcher/: watch-registry.yml
examples/09-defence-profile/: profile.yaml
examples/09-langchain-scan/: README.md  main.py  run.sh
examples/10-vulnerable-agent/: README.md  main.py  run.sh  system_prompt.txt
examples/10-vulnerable-agent/data/: employees.json  system_configs.json
examples/11-rag-financial-advisor/: README.md  main.py  run.sh
examples/11-rag-financial-advisor/data/: financial_docs.json
examples/12-router-rag/: README.md  main.py  run.sh
examples/12-router-rag/data/: customer_records.json  market_data.json  product_docs.json
examples/13-supervisor-multi-agent/: README.md  main.py  run.sh
examples/13-supervisor-multi-agent/data/: finance_records.json  hr_records.json
examples/14-crewai-scan/: README.md  main.py  run.sh
examples/15-remote-agent-scan/: README.md  main.py  run.sh  target-a2a.yaml  target-agentcore.yaml  target-local.yaml  target-mcp.yaml  target-ollama.yaml  target-openai-custom.yaml  target-openai.yaml  target-rest.yaml  vulnerable_server.py
examples/16-llm-judge/: README.md  main.py  run.sh
examples/17-bedrock-agent-scan/: README.md  bedrock-agent.yaml  main.py  run.sh
examples/18-agentcore-scan/: README.md  main.py  run.sh
examples/19-pentesting-agent/: README.md  interactive.py  main.py  pentest_vulnerable_agent.py  run.sh
examples/19-pentesting-agent/pentest_reports/: pentest_b9a11f78de1c4604.json  pentest_b9a11f78de1c4604.md  pentest_dd99e6947a0d4ff3.html  pentest_dd99e6947a0d4ff3.json  pentest_dd99e6947a0d4ff3.md  pentest_e34d6b1fc2a44477.json  pentest_e34d6b1fc2a44477.md
examples/20-browser-agent-scan/: README.md  main.py  run.sh  target-browser-auto.yaml  target-browser-login.yaml  target-browser.yaml
examples/21-promptfoo-integration/: README.md  promptfooconfig.yaml  ziran_assertions.py  ziran_provider.py
examples/21-promptfoo-integration/configs/: authorization-bypass.yaml  basic-security.yaml  data-exfiltration.yaml  full-campaign.yaml
examples/22-otel-tracing/: README.md  otel_console_scan.py  otel_otlp_scan.py
examples/23-quanta-agentcore/: README.md  main.py  run.sh
examples/_common/: __init__.py  progress.py
getting-started/: index.html
koan/: __init__.py
scripts/: record_readme_assets.sh  setup-branch-protection.sh
search/: search_index.json
tests/: __init__.py  conftest.py
ui/: eslint.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.app.json  vite.config.ts
ziran/: __init__.py  _version.py
(+1025 files in other folders)
